# TooManyPolys

./: CMakeLists.txt  GhostReplace.as  HashMap.as  PlayerModelPrecache.as  README.md  TooManyPolys.as  aliases.txt  models.txt  replace_dll.bat  replacements.json  update.py
scripts/: GhostReplace.as  PlayerModelPrecache.as  PluginHelpAnnouncements.as  UserInfo.as  aliases.txt  util.as
src/: GhostReplace.cpp  GhostReplace.h  PlayerModelPrecache.cpp  PlayerModelPrecache.h  PluginHelpAnnouncements.cpp  PluginHelpAnnouncements.h  main.cpp  main.h
